ui/src/app/layout/app.component.scss
.app {
    font-family: 'Roboto';
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-flow: column;
    overflow: hidden;
    color: var(--text-color);
    background-color: var(--bg-main);

    header {
        background-color: var(--bg-card);
        display: flex;
        flex-flow: row;
        border-bottom: 2px solid var(--color-vrv);
        a {
            margin: auto 5px;
            cursor: pointer;
            display: flex;
            color: #fff;
            text-decoration: none;
            b {
                color: var(--color-mondo);
            }
            img {
                width: 40px;
                height: 40px;
                border-radius: 50%;
                margin: 5px 0;
            }
            &.login-menu {
                margin: 13px;
            }
        }

        .title {
            margin: auto 5px;
            font-size: 22px;
        }
    }
    main {
        flex: 1;
        overflow: hidden;
        display: flex;
        flex-flow: row;
        position: relative;
        .content {
            flex: 1;
            z-index: 0;
        }
        .fade {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            z-index: 1;
            display: none;
            background-color: rgba(0, 0, 0, 0.8);
            transition: all 250ms;
            opacity: 0;
        }
        aside {
            position: absolute;
            top: 0;
            right: -300px;
            max-width: 300px;
            width: 100%;
            max-height: 100%;
            z-index: 2;
            background-color: var(--bg-card);
            overflow-x: hidden;
            overflow-y: auto;
            display: flex;
            flex-flow: column;
            transition: all 250ms;
            a {
                display: flex;
                flex-flow: row;
                color: var(--text-color);
                text-decoration: none;
                padding: 5px 15px;
                font-size: 20px;
                cursor: pointer;
                border-left: 2px solid var(--bg-card);
                .icon {
                    margin: auto 0;
                    width: 24px;
                    height: 24px;
                    svg {
                        path {
                            color: #fff;
                            fill: currentColor;
                        }
                    }

                    img {
                        max-width: 100%;
                        max-height: 100%;
                    }
                }
                .title {
                    margin: auto 10px;
                    flex: 1;
                }
                &:hover {
                    background-color: #474658;
                    border-left: 2px solid #474658;
                }
                &:first-child {
                    margin-top: 20px;
                }
                &:last-child {
                    margin-bottom: 20px;
                }
                &.active {
                    border-left: 2px solid var(--color-vrv);
                }
            }
        }

        &.open {
            .fade {
                display: block;
                opacity: 1;
            }

            aside {
                right: 0;
            }
        }
    }
}

